apps/site/web/static/css/_mode-group.scss
.mode-group-first {
  padding-top: 0;
}

.mode-group-header {
  @extend .h4;
  font-weight: bold;
  margin: 1rem 0;
}

.mode-group-btn {
  //scss-lint:disable PlaceholderInExtend
  @extend .btn;
  @include button-variant($link-color, white, $gray-lightest);
  @extend .btn-block;

  margin-bottom: .75rem;

  @include media-breakpoint-down(sm) {
    // small button
    @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $font-size-sm, $line-height-sm, $btn-border-radius-sm);
  }
}

.mode-group-footer {
  @extend .col-xs-12;
}

